[r=rbanffy][bug=][author=ricgard] Loading spinner alignment fix. New scss icon file & styles.

--- a/src/maasserver/static/scss/maas/layout/_headers.scss
+++ b/src/maasserver/static/scss/maas/layout/_headers.scss
@@ -259,6 +259,10 @@ header.banner {
             }
         }
 
+        .icon {
+            vertical-align: 3px;
+        }
+
         // Title identicator is used to show any sub pages and where
         // a user is currently.
         .page-header__title--identicator {
